    * [UIMA-1609] - binary assembly wrongly including FOP files
    * [UIMA-1615] - make build-from-sources work
    * [UIMA-1618] - Rename CasEditor NLP category to "Cas Editor" and the NLP project to "Cas Editor Project"
    * [UIMA-1619] - Clarify that a Cas Editor Project is required to use the Cas Editor in the documentation
    * [UIMA-1631] - UimaBootstrap Loader approach fails to work for classes loaded by logger (and maybe other parts of Java)
    * [UIMA-1641] - Cas Processor integration was changed, but documentation not updated
    * [UIMA-1647] - Scripts fail to call runUimaClass.sh 
    * [UIMA-1650] - Bug in common launcher script causing UIMA_CLASSPATH to be ignored
    * [UIMA-1663] - All directories in UIMA distribution should be 755
    * [UIMA-1664] - Windows command line files not working
    * [UIMA-1678] - Pear builder maven plugin should use "Package" mode of buildComponentClassPath 
    * [UIMA-1679] - UIMA scripts set memory options that override user's setiings
    * [UIMA-1683] - fix copyright notice in the NOTICE files
    * [UIMA-1687] - correct top-level svn license/notice files
    * [UIMA-1688] - Cas Editor throws NPE when cleaning a document which is opened
    * [UIMA-1690] - After cleaning a document the outline view does not sync
    * [UIMA-1692] - add missing license headers to .project files etc. in uimaj-eclipse-... projects

** Improvement
    * [UIMA-71] - New v2 features missing from tutorial chapters
    * [UIMA-420] - CVD should use encoding list provided by JVM
    * [UIMA-472] - CAS Editor: All annotation inside the editor should have a differnt default colors as its done in the "UIMA Annotation Viewer"
    * [UIMA-483] - JCas method like getSofaDataString that doesn't copy the chars from the StringHeap
    * [UIMA-518] - improve browser utilities to configured the used browser in UIMA
    * [UIMA-554] - Have produceResource for CollectionReaders operate like other Analysis Engines with respect to setup of type system