@@ -416,6 +416,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1619'>UIMA-1619</a>] -         Clarify that a Cas Editor Project is required to use the Cas Editor in the documentation
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1621'>UIMA-1621</a>] -         CVD should work when classes loaded dynamically
+</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1631'>UIMA-1631</a>] -         UimaBootstrap Loader approach fails to work for classes loaded by logger (and maybe other parts of Java)
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1641'>UIMA-1641</a>] -         Cas Processor integration was changed, but documentation not updated
@@ -441,6 +443,8 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1690'>UIMA-1690</a>] -         After cleaning a document the outline view does not sync
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1692'>UIMA-1692</a>] -         add missing license headers to .project files etc. in uimaj-eclipse-... projects
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1694'>UIMA-1694</a>] -         Error 'scm url cannot be null' on uimaj POM
 </li>
 </ul>
     
@@ -629,6 +633,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1691'>UIMA-1691</a>] -         change checkout to export in extract and build scripts
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1695'>UIMA-1695</a>] -         Eclipse tooling: CDE fully instantiates components of aggregates, resulting in OutOfMemory issues
+</li>
 </ul>
     
 <h2>        New Feature
@@ -675,6 +681,7 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1389'>UIMA-1389</a>] -         Remove OpenNLP example wrapper
 </li>
 </ul>
-        
+    
+       
 </body>
 </html>
